# HotW

./: .gitignore  CMakeLists.txt  Makefile  Makefile.HotW  Makefile.local  README.md
.github/workflows/: blank.yml  main.yml
code/: sdl_input.c
code/asm/: ftola.c  matha.s  qasm-inline.h  qasm.h  snapvector.c  snd_mixa.s
code/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  (+21 more)
code/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newdraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_servercmds.c  cg_snapshot.c  cg_syscalls.c  cg_view.c  cg_weapons.c
code/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keycodes.h  snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c  snd_openal.c  snd_public.h  snd_wavelet.c
code/game/: ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  ai_vcmd.c  ai_vcmd.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  chars.h  g_active.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_hit.c  g_items.c  g_local.h  g_main.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_public.h  g_session.c  g_spawn.c  g_svcmds.c  g_syscalls.c  (+10 more)
code/null/: mac_net.c  null_client.c  null_main.c  null_net.c  null_snddma.c
code/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  ioapi.c  md4.c  md5.c  msg.c  net_chan.c  net_ip.c  q_check.h  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  unzip.c  vm.c  vm_interpreted.c  vm_local.h  vm_x86.c
code/renderercommon/: qgl.h  tr_common.h  tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
code/renderergl1/: tr_animation.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_sky.c  tr_surface.c  tr_world.c
code/renderergl2/: tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_extensions.c  tr_fallback_shaders.c  tr_flares.c  tr_glsl.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_snd.c
code/server/: server.h  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_world.c
code/sys/: con_log.c  con_passive.c  con_tty.c  con_win32.c  sys_loadlib.h  sys_local.h  sys_main.c  sys_osx.m  sys_unix.c  sys_win32.c  win_resource.h  win_resource.rc
code/tools/asm/: cmdlib.c  cmdlib.h  lib.txt  mathlib.h  opstrings.h  q3asm.c
code/tools/lcc/cpp/: cpp.c  cpp.h  include.c  lex.c
code/tools/lcc/etc/: lcc.c
code/tools/lcc/lburg/: gram.c  lburg.c
code/tools/lcc/src/: bytecode.c  dag.c  expr.c  stmt.c
code/ui/: ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
misc/msvc/: clean.bat
misc/msvc/vc9/: UpgradeLog.htm  build_x86.bat  cgame.vcproj  cgame.vcxproj  cgame.vcxproj.filters  game.vcproj  game.vcxproj  game.vcxproj.filters  sg.sln  smokinguns.vcproj  smokinguns.vcxproj  smokinguns.vcxproj.filters  ui.vcproj  ui.vcxproj  ui.vcxproj.filters
